--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,13 +36,13 @@ jobs:
       # run tests!
       - run: npm test
 
-      - run: mkdir -p $CIRCLE_TEST_REPORTS/mocha
+      - run: mkdir ~/mocha
       - run:
           command: node_modules/.bin/mocha test --reporter mocha-junit-reporter
           environment:
-            MOCHA_FILE: $CIRCLE_TEST_REPORTS/mocha/junit.xml
+            MOCHA_FILE: mocha/junit.xml
           when: always
       - store_test_results:
-          path: $CIRCLE_TEST_REPORTS/mocha
+          path: ~/mocha
       - store_artifacts:
-          path: $CIRCLE_TEST_REPORTS/mocha
+          path: ~/mocha
