--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
       - run:
           command: node_modules/.bin/mocha test --reporter mocha-junit-reporter
           environment:
-            MOCHA_FILE: mocha/junit.xml
+            MOCHA_FILE: ~mocha/junit.xml
           when: always
       - store_test_results:
           path: ~/mocha
